name:                lunarsite
version:             0.1.0.0
synopsis:            Personal website
homepage:            http://www.lunaryorn.com
license:             MIT
license-file:        LICENSE
author:              Sebastian Wiesner
maintainer:          lunaryorn@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable lunarsite
  main-is:             main.hs
  other-modules:       Web.Lunarsite.Main
                       Web.Lunarsite.Pandoc
                       Web.Lunarsite.Routes
                       Web.Lunarsite.Template.Context
  build-depends:       base >=4.6 && <4.7,
                       containers >=0.5 && <0.6,
                       time >=1.4 && <1.5,
                       old-locale >=1.0 && <1.1,
                       network >=2.4 && <2.5,
                       blaze-html >=0.7 && <0.8,
                       pandoc-types >=1.12 && <1.13,
                       pandoc >=1.12 && <1.13,
                       hakyll >=4 && <5
  default-language:    Haskell2010
