name:                lunarsite
version:             0.1.0.0
synopsis:            Personal website
homepage:            http://www.lunaryorn.com
license:             MIT
author:              Sebastian Wiesner
maintainer:          lunaryorn@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  css/*.css
                     images/*.png
                     images/*.jpg
                     pages/*.md
                     posts/*.md
                     templates/*.html
                     .nojekyll
                     CNAME
                     index.html

executable lunarsite
  hs-source-dirs:      src/
  main-is:             main.hs
  other-modules:       Foreign.Python
                       Foreign.Python.Native
                       Text.Highlighting.Pygments
                       Text.Highlighting.Pygments.Pandoc
                       Web.Lunarsite.Info
                       Web.Lunarsite.Main
                       Web.Lunarsite.Pandoc
                       Web.Lunarsite.Routes
                       Web.Lunarsite.Template.Context
  build-depends:       base >=4.6 && <4.8,
                       bytestring >=0.10 && < 0.11,
                       utf8-string >=0.3 && <0.4,
                       filepath >= 1.3 && <1.4,
                       containers >=0.5 && <0.6,
                       time >=1.4 && <1.5,
                       old-locale >=1.0 && <1.1,
                       network >=2.4 && <2.5,
                       blaze-html >=0.7 && <0.8,
                       pandoc-types >=1.12 && <1.13,
                       pandoc >=1.12 && <1.13,
                       hakyll >=4 && <5
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-tools:         hsc2hs

  if os(darwin)
     extra-libraries:   python2.7
     include-dirs:      /usr/include/python2.7
  else
     pkgconfig-depends: python-2.7
